// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar #controls 1`] = `
<div
  className="Draftail-Toolbar"
  role="toolbar"
>
  <ToolbarDefaults
    addBR={[Function]}
    addHR={[Function]}
    blockTypes={Array []}
    commands={false}
    controls={
      Array [
        Object {
          "block": [Function],
        },
      ]
    }
    currentBlock="unstyled"
    currentBlockKey="abcd"
    currentStyles={Immutable.OrderedSet []}
    enableHorizontalRule={false}
    enableLineBreak={false}
    entityTypes={Array []}
    focus={[Function]}
    getEditorState={[Function]}
    inlineStyles={Array []}
    onChange={[Function]}
    onCompleteSource={[Function]}
    onRequestSource={[Function]}
    onUndoRedo={[Function]}
    showRedoControl={false}
    showUndoControl={false}
    toggleBlockType={[Function]}
    toggleInlineStyle={[Function]}
  />
  <ToolbarGroup>
    <block
      getEditorState={[Function]}
      key="0"
      onChange={[Function]}
    />
  </ToolbarGroup>
</div>
`;

exports[`Toolbar empty 1`] = `
<div
  className="Draftail-Toolbar"
  role="toolbar"
>
  <ToolbarDefaults
    addBR={[Function]}
    addHR={[Function]}
    blockTypes={Array []}
    commands={false}
    controls={Array []}
    currentBlock="unstyled"
    currentBlockKey="abcd"
    currentStyles={Immutable.OrderedSet []}
    enableHorizontalRule={false}
    enableLineBreak={false}
    entityTypes={Array []}
    focus={[Function]}
    getEditorState={[Function]}
    inlineStyles={Array []}
    onChange={[Function]}
    onCompleteSource={[Function]}
    onRequestSource={[Function]}
    onUndoRedo={[Function]}
    showRedoControl={false}
    showUndoControl={false}
    toggleBlockType={[Function]}
    toggleInlineStyle={[Function]}
  />
  <ToolbarGroup />
</div>
`;
